--- a/example/package.json
+++ b/example/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "expo": "~54.0.13",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "expo-zebra-print": "file:../"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
