--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Printing support for Expo and Zebra Printers",
   "main": "build/index.js",
   "types": "build/index.d.ts",
+  "app": "app.plugin.js",
   "scripts": {
     "build": "expo-module build",
     "clean": "expo-module clean",
@@ -36,6 +37,7 @@
     "react-native": "0.81.4"
   },
   "devDependencies": {
+    "@expo/config-plugins": "~10.0.0",
     "@types/react": "~19.1.0",
     "expo-module-scripts": "^5.0.7",
     "expo": "^54.0.12",
