--- a/android/build.gradle
+++ b/android/build.gradle
@@ -40,4 +40,15 @@ android {
   lintOptions {
     abortOnError false
   }
+  packagingOptions {
+    exclude 'META-INF/LICENSE.txt'
+    exclude 'META-INF/NOTICE.txt'
+    exclude 'META-INF/NOTICE'
+    exclude 'META-INF/LICENSE'
+    exclude 'META-INF/DEPENDENCIES'
+  }
+}
+
+dependencies {
+  implementation fileTree(dir: 'src/libs', include: ['*.jar'])
 }
